[project]
name = "test-telegramm-bot"
version = "0.1.0"
description = "test bot"
authors = [
    {name = "Dmitriy Boyarinov",email = "boyar.d@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot (>=21.10,<22.0)",
    "aiohttp (>=3.11.11,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
